--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,9 @@ title: Accounts Payable Analytics
 description: Analytical dashboards and reports focused on the Accounts Payable department.
 baseurl: "/accounts-payable-analytics"
 url: "https://marcin-charzynski.github.io"
-theme: minima
+plugins:
+  - jekyll-remote-theme
+remote_theme: Marcin-Charzynski/marcin-charzynski.github.io
 markdown: kramdown
 
 kramdown:
